Modify makefile objects path

--- a/FreeRTOS/Demo/H83069F/makefile
+++ b/FreeRTOS/Demo/H83069F/makefile
@@ -124,7 +124,7 @@ $(TARGET) : $(TARGET_COFF)
 	$(OBJCOPY) -v $(OUTPUT_FORMAT) $(TARGET_COFF) $(TARGET)
 
 $(TARGET_COFF) : $(OBJ)
-	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJ) -o $(TARGET_COFF)
+	$(CC) $(CFLAGS) $(LDFLAGS) *.o -o $(TARGET_COFF)
 	$(SIZE) -Ax $(TARGET_COFF)
 
 clean :
