Disable Serial Communication

--- a/FreeRTOS/Demo/H83069F/makefile
+++ b/FreeRTOS/Demo/H83069F/makefile
@@ -104,7 +104,6 @@ $(SOURCE_PATH)/portable/MemMang/heap_1.c \
 $(PORT_PATH)/port.c \
 $(DEMO_PATH)/flash.c \
 $(DEMO_PATH)/integer.c \
-$(DEMO_PATH)/comtest.c \
 $(DEMO_PATH)/PollQ.c
 
 CFLAGS=-mh -mrelax -mint32 $(OPT) $(DEBUG) $(INCLUDES) -DGCC_H83069F $(WARNINGS)
@@ -128,7 +127,7 @@ $(TARGET_COFF) : $(OBJ)
 	$(SIZE) -Ax $(TARGET_COFF)
 
 clean :
-	rm -f $(TARGET) $(TARGET_COFF) $(MAP_FILE) $(OBJ) $(STARTUP:.s=.o)
+	rm -f $(TARGET) $(TARGET_COFF) $(MAP_FILE) *.o $(STARTUP:.s=.o)
 
 .c.o:
 	$(CC) -c $(CFLAGS) $<
